<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dialogBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/disconnect_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_message_title"
        android:textStyle="bold"
        android:textSize="12pt"
        android:textColor="@color/primaryTextColor"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disconnect_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_message_message"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="@dimen/margin_text_small"
        app:layout_constraintTop_toBottomOf="@id/disconnect_dialog_title"
        app:layout_constraintStart_toStartOf="@id/disconnect_dialog_title"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_text"
        app:layout_constraintTop_toBottomOf="@id/disconnect_dialog_text"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:id="@+id/disconnect_dialog_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_option_yes"
            android:background="@color/transparent"
            android:textColor="@color/primaryTextColor"
            />

        <Button
            android:id="@+id/disconnect_dialog_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_option_no"
            android:background="@color/transparent"
            android:textColor="@color/primaryTextColor"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>