<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/primaryDarkColor">

        <ImageView
            android:id="@+id/about_page_icon"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version 1.0"
            android:textSize="20dp"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/about_credit_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference1"
            android:autoLink="web"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/about_credit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference2"
            android:autoLink="web"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/about_credit_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference3"
            android:autoLink="web"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/about_credit_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference4"
            android:autoLink="web"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>